/***********************************************************************
X3 ChangeLog

2010-05-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added SET action for SEARCH.

	* src/nickserv.help: Added SET action for SEARCH.

2010-05-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added NickServ search title criteria.

	* src/nickserv.help: Added NickServ search title criteria.

2010-04-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.c: Minor typo in previous commit where returning 0
	when it should have been 1 from opserv_join_check().

2010-04-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.c: Fix for possible bug in opserv_join_check().

2010-04-23  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/log.c: Modified X3.last to only show host and ident to
	opers.

2010-03-15  Matthew Beeching  <jobe@mdbnet.co.uk>

	* ChangeLog: Abusing to figure out mercurial a bit.

2010-03-13  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/hash.h: Changed HOSTLEN to match Nefarious.

2010-03-03  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fixed bug in P10 B64 IPv6 parsing where the
	entire IPv6 IP after the :: was ommited.

2010-02-27  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Added message handlers for ZLINE and REMOVE
	to ignore both messages

2010-02-05  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.help: Fix for a minor documentation error where $S
	was used instead of $N.

2010-01-14  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added support for LDAP auth registering initial
	nick when nick registration is enabled.

2010-01-09  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* Srvx sync. Author: Michael Poole.

	* src/ioset.c (ioset_listen): Linux -- reasonably -- requires that
	SO_REUSEADDR be set on a socket before binding it to an in-use socket.
	So do that.

	* src/sar.c: Convert "struct sockaddr_storage" to "void *" to comply